apps/staging/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - audiobookshelf.christophervestman.com
      secretName: audiobookshelf-tls
  rules:
    - host: audiobookshelf.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
            path: /
            pathType: Prefix
